# bpi-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  SECURITY.md  Taskfile.yml  account.example.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: api_request.md  bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: api-index.md  api-probe-development.md  api-risk-classification.md  development.md  migration-0.2.md  release-checklist.md
examples/: live_room_info.rs  live_web_start.rs  login_status.rs  module_clients.rs  video_info.rs
examples/common/: account.rs
flightdeck/: briefing.md  cockpit.md
flightdeck/knowledge/git/: pre-commit-checklist.md
flightdeck/knowledge/release/: local-release-disk-checklist.md
flightdeck/knowledge/rust/: recoverable-response-decode.md  sdk-quality.md
scripts/: comment-language-audit.ps1
src/: auth.rs  client.rs  ids.rs  lib.rs  log.rs  main.rs  request.rs  response.rs
src/activity/: client.rs  info.rs  list.rs  mod.rs
src/article/: action.rs  articles.rs  card.rs  category.rs  client.rs  info.rs  mod.rs  models.rs  params.rs  view.rs
src/audio/: action.rs  client.rs  info.rs  mod.rs  music_list.rs  musicstream_url.rs  params.rs  rank.rs  status_number.rs
src/bangumi/: client.rs  follow.rs  info.rs  mod.rs  params.rs  timeline.rs  videostream_url.rs
src/cheese/: client.rs  info.rs  mod.rs  params.rs  videostream_url.rs
src/clientinfo/: client.rs  ip.rs  mod.rs  params.rs
src/comment/: action.rs  client.rs  list.rs  mod.rs  types.rs
src/creativecenter/: client.rs  mod.rs  opus.rs  params.rs  railgun.rs  statistics_data.rs  upload.rs  videos.rs
src/creativecenter/season/: aid.rs  (+8 more)
src/danmaku/: action.rs  client.rs  danmaku_xml.rs  history.rs  mod.rs  snapshot.rs  thumbup.rs  web.rs
src/dynamic/: action.rs  all.rs  banner.rs  basic_info.rs  card_info.rs  client.rs  content.rs  detail.rs  dynamic_enum.rs  get_dynamic_detail.rs  mod.rs  module.rs  nav.rs  params.rs  publish.rs  serde_utils.rs  space.rs  topic.rs
src/electric/: bcoin.rs  charge_list.rs  charge_msg.rs  client.rs  mod.rs  monthly.rs
src/err/: code.rs  error.rs  from.rs  mod.rs
src/fav/: action.rs  client.rs  info.rs  list.rs  mod.rs  params.rs
src/historytoview/: client.rs  history.rs  mod.rs  params.rs  toview.rs
src/live/: client.rs  danmaku.rs  emoticons.rs  follow_up_live.rs  gift.rs  guard.rs  info.rs  live_area.rs  live_bill.rs  live_replay.rs  live_stream.rs  manage.rs  message_stream.rs  mod.rs  recommend.rs  redpocket.rs  report.rs  silent_user_manage.rs  user.rs
src/login/: client.rs  cookie_refresh.rs  exit.rs  login_notice.rs  mod.rs  model.rs  params.rs
src/manga/: activity.rs  client.rs  clockin.rs  comic.rs  download.rs  mod.rs  point_shop.rs  season.rs  user.rs
src/message/: client.rs  mod.rs  msg.rs  params.rs  private_msg.rs  private_msg_content.rs
src/misc/: b23tv.rs  buvid.rs  client.rs  mod.rs  params.rs
src/models/: label.rs  level.rs  mod.rs  nameplate.rs  official.rs  pendant.rs  sign.rs  stream.rs  user.rs  vip.rs
src/note/: action.rs  client.rs  info.rs  list.rs  mod.rs  params.rs
src/opus/: client.rs  mod.rs  params.rs  space.rs
src/probe/: account.rs  audit.rs  batch.rs  catalog.rs  contract.rs  endpoint_contract.rs  field_audit.rs  flow.rs  mod.rs  model.rs  promote.rs  run.rs  sanitize.rs
src/search/: client.rs  hot.rs  mod.rs  result.rs  search.rs  search_params.rs  suggest.rs  typed.rs
src/session/: account.rs  cookie.rs  mod.rs
src/sign/: bili_ticket.rs  mod.rs  wbi.rs  wbi_client.rs
src/testing/: mod.rs
src/transport/: mod.rs  request.rs  reqwest.rs  response.rs
src/user/: batch.rs  client.rs  contract.rs  info.rs  medals.rs  mod.rs  model.rs  official_role.rs  params.rs  register.rs  search.rs  space.rs  status_number.rs
src/utils/: aid_bvid.rs  mod.rs  wbi.rs
src/video/: action.rs  appeal.rs  attribute_data.rs  client.rs  interact_video.rs  mod.rs  model.rs  online.rs  params.rs  pbp.rs  player.rs  recommend.rs  report.rs  snapshot.rs  summary.rs  tags.rs  video_zone.rs  video_zone_v2.rs  videostream_url.rs
src/video_ranking/: client.rs  dynamic.rs  mod.rs  params.rs  popular.rs  precious_videos.rs  ranking.rs
src/vip/: action.rs  center.rs  client.rs  clockin.rs  mod.rs  params.rs
src/wallet/: client.rs  info.rs  mod.rs  params.rs
src/web_widget/: banner.rs  client.rs  header.rs  mod.rs  params.rs  zone_upload.rs
tests/: contract_runner.rs
(+558 files in other folders)
